[package]
name = "regress-py"
version = "2024.11.1"
edition = "2021"

[lib]
name = "regress"
crate-type = ["cdylib"]

[dependencies]
regress = "0.10.1"

[dependencies.pyo3]
version = "0.23.3"
# To build extension for PyPy on Windows, "generate-import-lib" is needed:
# https://github.com/PyO3/maturin-action/issues/267#issuecomment-2106844429
features = ["extension-module", "generate-import-lib"]
