[package]
name = "regress-py"
version = "2025.3.1"
edition = "2021"

[lib]
name = "regress"
crate-type = ["cdylib"]

[dependencies]
regress = "0.10.3"

[dependencies.pyo3]
version = "0.24.0"
# To build extension for PyPy on Windows, "generate-import-lib" is needed:
# https://github.com/PyO3/maturin-action/issues/267#issuecomment-2106844429
features = ["extension-module", "generate-import-lib"]
