[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "regress"
description = "Python bindings to Rust's regress ECMA regular expressions library"
readme = "README.rst"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["regex", "rust", "javascript", "ecmascript", "regular expressions"]
authors = [
  {email = "Julian+regress@GrayVines.com"},
  {name = "Julian Berman"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",

]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/crate-py/regress"
Issues = "https://github.com/crate-py/regress/issues"
Funding = "https://github.com/sponsors/Julian"
Source = "https://github.com/crate-py/regress"
Upstream = "https://github.com/ridiculousfish/regress"

[tool.isort]
combine_as_imports = true
from_first = true
include_trailing_comma = true
multi_line_output = 3

[tool.maturin]
features = ["pyo3/extension-module"]
